refactor: avoid magic numbers